# bili-qml-desktop

./: .gitignore  B站问号榜.spec  NEW_README.md  README.md  pyproject.toml
src/my_pyqt_app/: __init__.py  __main__.py
src/my_pyqt_app/models/: bilibili_api.py
src/my_pyqt_app/ui/: main_window.ui  ui_main_window.py
src/my_pyqt_app/views/: main_window.py
