[project]
name = "bili-qml-desktop"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "chenhlSH", email = "15721484483@163.com"},
]
dependencies = ["pyqt6==6.4.2", "pyqt6-tools>=6.4.2.3.3"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "black>=25.12.0",
]
