[project]
name = "bili-qml-desktop"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "chenhlSH", email = "15721484483@163.com"},
]
dependencies = ["pyqt6==6.4.2", "pyqt6-tools>=6.4.2.3.3", "requests>=2.25.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "GPL-3.0-only"}



[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "python src/my_pyqt_app/__main__.py"
build = "pyinstaller src/my_pyqt_app/__main__.py --name B站问号榜 --windowed --add-data=src;src"
[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "black>=25.12.0",
    "pyinstaller>=6.18.0",
]

